# ayeye

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt  test_portal.py
.beads/: issues.jsonl
.tickets/: ayeye-1yl.md  ayeye-2cu.md  ayeye-2ij.md  ayeye-dod.md  ayeye-en6.md  ayeye-g8b.md  ayeye-hmn.md  ayeye-hqh.md  ayeye-m6h.md  ayeye-n3v.md  ayeye-t64.md  ayeye-xk2.md  ayeye-zi2.md
src/: analyzer.rs  config.rs  main.rs  portal.rs  recorder.rs
src/ayeye/: analyzer.py  app.py  cli.py  config.py  interactive.py  issue_creator.py  record_helper.py  recorder.py  simple_recorder.py
