[package]
name = "ayeye"
version = "0.1.0"
edition = "2021"
description = "AI-powered video issue recorder for Linux"
authors = ["Ryan Swift"]
license = "MIT"
readme = "README.md"
keywords = ["screen-recording", "bug-reporting", "gemini", "wayland", "linux"]
categories = ["command-line-utilities", "multimedia::video"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal", "io-std"] }

# XDG Portal - high-level library
ashpd = "0.11"

# GStreamer
gstreamer = "0.23"

# HTTP client for Gemini API
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
directories = "5"
dotenvy = "0.15"
chrono = "0.4"
